[project]
name = "render-status-deploys"
version = "0.1.0"
description = "CLI tool to check Render deploy and cron job status"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Miguel David", email = "migueldavid@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0"
]

[project.scripts]
render-status = "render_status_deploys.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
